modules/k8s/env/k3s/wp-cli/03-base-de-dades.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-cli-bd
  namespace: proves
spec:
  selector:
    matchLabels:
      application: wp-cli-bd
      entorn: pro
      tier: base-de-dades
      tecnologia: mariadb
  serviceName: "wp-cli-bd"
  replicas: 1
  template:
    metadata:
      labels:
        application: wp-cli-bd
        entorn: pro
        tier: base-de-dades
        tecnologia: mariadb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: wp-cli-bd
          image: registry.$domain_stg_ba/bcnact-images/mariadb:10.6
          ports:
            - containerPort: 3306
              name: wp-cli-bd
          volumeMounts:
            - name: wp-cli-bd
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
  volumeClaimTemplates:
    - metadata:
        name: wp-cli-bd
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "k8s-pro-b15390a-contingut"
        resources:
          requests:
            storage: 1Gi
