modules/k8s/env/k3s/wp-cli/06-frontal-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-cli-frontal
  namespace: proves
spec:
  replicas: 1
  selector:
    matchLabels:
      application: wp-cli-frontal
      entorn: pro
      tier: frontal
      tecnologia: wordpress
  template:
    metadata:
      labels:
        application: wp-cli-frontal
        entorn: pro
        tier: frontal
        tecnologia: wordpress
    spec:
      containers:
        - name: wp-cli-frontal
          image: registry.$domain_stg_ba/ap/test/frontal-wp-cli:develop-0.0.0-12301
          ports:
            - containerPort: 80
              name: web
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
          volumeMounts:
            #Aquest utilitza el pvc
            - name: wp-cli-frontal
              mountPath: /var/www/html
      volumes:
        #Aquest utilitza el pvc
        - name: wp-cli-frontal
          persistentVolumeClaim:
            claimName: wp-cli-frontal
