modules/k8s/env/k3s/wp-cli/02-servei-frontal.yml
apiVersion: v1
kind: Service
metadata:
  name: wp-cli-frontal
  namespace: proves
  labels:
    application: wp-cli-frontal
    entorn: pro
    tier: frontal
    tecnologia: wordpress
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    application: wp-cli-frontal
    entorn: pro
  type: NodePort
