modules/k8s/env/k3s/wp-cli/04-servei-bd.yml
apiVersion: v1
kind: Service
metadata:
  name: wp-cli-bd
  namespace: proves
  labels:
    application: wp-cli-bd
    entorn: pro
    tier: base-de-dades
    tecnologia: mariadb
spec:
  ports:
    - port: 3306
  selector:
    application: wp-cli-bd
    entorn: pro
  clusterIP: None
