modules/k8s/env/k3s/wp-cli/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-cli-frontal
  namespace: proves
  labels:
    application: wp-cli-frontal
    entorn: pro
    tier: frontal
    tecnologia: wordpress
spec:
  defaultBackend:
    service:
      name: wp-cli-frontal
      port:
        number: 80
  rules:
    - host: wp-cli.$domain_intra_ba
      http:
        paths:
          - backend:
              service:
                name: wp-cli-frontal
                port:
                  number: 80
            path: /
            pathType: Prefix
